--- a/Index.html
+++ b/Index.html
@@ -1,2 +1,12 @@
-<h1>khai0030</h1>
-<p>cfxjdfrdd</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Tags</title>
+</head>
+<body>
+    <p>This is a paragraph.</p>
+</body>
+</html>
