--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>This is a paragraph.</p>
+    <!--This is an invisible comment--> 
     <p>And that's another paragraph...</p>
 </body>
 </html>
