--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,16 @@
     <title>HTML Tags</title>
 </head>
 <body>
-    <p>This is a paragraph.</p>
-    <!--This is an invisible comment--> 
-    <p>And that's another paragraph...</p>
+    <header>
+        <h1>Welcome!</h1>
+    </header>
+    <article>
+        <p>This is a paragraph.</p>
+     <!--This is an invisible comment--> 
+     <p>And that's another paragraph...</p>
+    </article>
+    <footer>
+       <p>Obviously...</p>
+    </footer>
 </body>
 </html>
