--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <h1>Elsa Khairallah</h1>
 </head>
 <body>
-    
+    <article>
+        <h2>About Me</h2>
+    </article>
 </body>
 </html>
