--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,6 +10,8 @@
 <body>
     <article>
         <h2>About Me</h2>
+        <p>I was born in Lebanon and lived there for 18 years. My sister moved to Canada when I was 10. I decided then that when I graduate high school, I’m going to follow her, and here I am today after 8 years. I have been working really hard for this day to come.</p>
+        <p>I have many hobbies, and these include: dancing, photography, martial arts (more specifically Wing Chun Kung Fu), cooking, and playing instruments like guitar and piano although I’m self taught and do not really play well. My favorite hobby though, is gaming. I love spending time with my friends on Discord while we play together, and I would like to be a streamer one day.</p>
     </article>
 </body>
 </html>
