--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,8 +10,10 @@
 <body>
     <article>
         <h2>About Me</h2>
-        <p>I was born in Lebanon and lived there for 18 years. My sister moved to Canada when I was 10. I decided then that when I graduate high school, I’m going to follow her, and here I am today after 8 years. I have been working really hard for this day to come.</p>
+        <p>I was born in Lebanon on July 15<sup>th</sup> and lived there for 18 years. My sister moved to Canada when I was 10. I decided then that when I graduate high school, I’m going to follow her, and here I am today after 8 years. I have been working really hard for this day to come.</p>
         <p>I have many hobbies, and these include: dancing, photography, martial arts (more specifically Wing Chun Kung Fu), cooking, and playing instruments like guitar and piano although I’m self taught and do not really play well. My favorite hobby though, is gaming. I love spending time with my friends on Discord while we play together, and I would like to be a streamer one day.</p>
+        <p>Here's a quote by <em>Carrie Green</em> which i kept on my desk everytime i studied and got me here today:
+        <q>"I can and I will. Watch me.</q></p>
     </article>
 </body>
 </html>
