modifies index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     This is a <abbr title="Hypertext Markup Language">HTML</abbr> Document
+    <img src="images/elsa.jpg" alt="image of elsa"
+   
     <article>
         <h2>About Me</h2>
         <p>I was born in Lebanon on July 15<sup>th</sup> and lived there for 18 years. My sister moved to Canada when I was 10. I decided then that when I graduate high school, I’m going to follow her, and here I am today after 8 years. I have been working really hard for this day to come.</p>
@@ -16,6 +18,7 @@
         <p>Here's a quote that i kept on my desk everytime i studied and got me here today:
     <blockquote>I can and I will. Watch me.<cite>-Carrie Green</cite></blockquote> </p>
     </article>
+
     <footer>Copyright : elsa iS aMaZiNg cause she managed to do all that by herself</footer>
 </body>
 </html>
