modifies index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
     This is a <abbr title="Hypertext Markup Language">HTML</abbr> Document
-    <img src="images/elsa.jpg" alt="image of elsa"
+    <nav>
+        <a
+    </nav>
+    <section>
+        <img src="images/image1.png" alt="image of elsa"
+    </section>
+    <section>
+        <ul>
+          <li>Dancing</li>  
+          <li>Gaming</li>
+          <li>Martial Arts</li>
+        </ul>
+    </section>
    
     <article>
         <h2>About Me</h2>
