--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -16,6 +16,7 @@
         <img src="images/image1.png" alt="image of elsa"
     </section>
     <section>
+        <h2>Hobbies</h2>
         <ul>
           <li>Dancing</li>  
           <li>Gaming</li>
