modifies index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,7 +10,7 @@
 <body>
     This is a <abbr title="Hypertext Markup Language">HTML</abbr> Document
     <nav>
-        <a
+        <a href="notes.html">NOTES</a>
     </nav>
     <section>
         <img src="images/image1.png" alt="image of elsa"
