--- a/week-5/index.html
+++ b/week-5/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning CSS</title>
-    <link href="css/main.css" rel="stylesheet"
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- This is an HTML comment -->
+    <h1>Learning CSS</h1>
 </body>
 </html>
