updates css and html examples

--- a/week-5/index.html
+++ b/week-5/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <!-- This is an HTML comment -->
-    <h1>Learning CSS</h1>
+    <header>
+        <h1>Learning CSS</h1>
+    </header>
+    <section id="main-section">
+        <h1 class="main-heading">More Lorem</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quasi quaerat nesciunt, unde aspernatur sed, modi deserunt maiores veritatis nihil quis non expedita eum eaque nemo quae ipsam provident inventore.</p>
+        <h1 class="secondary-heading">Second Heading</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo iure expedita suscipit porro unde, obcaecati maxime, quas deleniti quaerat debitis soluta error facilis quidem dolorem earum, neque dolorum aliquam voluptate?</p>
+        <a href="http://google.com">Google!! :D</a>
+        <a href="http://algonquincollege.com">AC!! :D</a>
+            <ul>
+    <li>Listed item 1</li>
+    <li>Listed item 2</li>
+</ul>
+        </section>
+
 </body>
 </html>
