links main.css to index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     <h1>Elsa Khairallah</h1>
@@ -14,7 +14,7 @@
         <a href="notes.html">NOTES</a>
     </nav>
     <section>
-        <img src="images/image1.png" alt="image of elsa"
+        <img src="images/image1.png" alt="image of elsa">
     </section>
     <section>
         <h2>Hobbies</h2>
