modifies index.html and notes.html and main.css

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,17 +8,20 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Elsa Khairallah</h1>
+    <header class="site-title">
+        <h1>Elsa Khairallah</h1>
+    </header>
     This is a <abbr title="Hypertext Markup Language">HTML</abbr> Document
     <nav>
         <a href="notes.html">NOTES</a>
     </nav>
     <section>
-        <img src="images/image1.png" alt="image of elsa">
+        <img src="images/image1.png" alt="image of elsa" id="my-image">
+    
     </section>
     <section>
         <h2>Hobbies</h2>
-        <ul>
+        <ul class="hobbies" style="list-style-type:square"></ul>
           <li>Dancing</li>  
           <li>Gaming</li>
           <li>Martial Arts</li>
@@ -33,6 +36,6 @@
     <blockquote>I can and I will. Watch me.<cite>-Carrie Green</cite></blockquote> </p>
     </article>
 
-    <footer>Copyright : elsa iS aMaZiNg cause she managed to do all that by herself</footer>
+    <footer>Copyright : elsa iS aMaZiNg cause she managed to do all that by herself! :D</footer>
 </body>
 </html>
