--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     <nav> <a href="index.html">INDEX</a></nav>
     <h1>Notes</h1>
+<ul class=unordered-list>
+    <li>iTeM</li>
+    <li>ItEm</li>
+    <li>ITEM</li>
+    <li>item</li>
+</ul>
     <dl>
         <dt><strong>strong</strong></dt>
         <dd>turns a word/sentence bold</dd>
