--- a/week-6/index.html
+++ b/week-6/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Typography and Backgrounds</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas ex quisquam possimus distinctio, nesciunt animi ratione! Commodi illum cumque alias pariatur dolor magnam perferendis adipisci veritatis? Quam architecto repudiandae ipsum!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id soluta ullam ab sed repudiandae, quo corrupti itaque cupiditate officia possimus veniam ut, dolorem quas quos hic quisquam quaerat. Explicabo, fuga!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit in nobis itaque officia blanditiis reiciendis sunt recusandae exercitationem vel mollitia nostrum quo illum dolore error, minima nam modi unde ad.</p>
+    <p class="uppercase">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas ex quisquam possimus distinctio, nesciunt animi ratione! Commodi illum cumque alias pariatur dolor magnam perferendis adipisci veritatis? Quam architecto repudiandae ipsum!</p>
+    <p class="bolded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id soluta ullam ab sed repudiandae, quo corrupti itaque cupiditate officia possimus veniam ut, dolorem quas quos hic quisquam quaerat. Explicabo, fuga!</p>
+    <p class="italics">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit in nobis itaque officia blanditiis reiciendis sunt recusandae exercitationem vel mollitia nostrum quo illum dolore error, minima nam modi unde ad.</p>
 </body>
 </html>
