last changes maybe

--- a/week-6/index.html
+++ b/week-6/index.html
@@ -7,9 +7,11 @@
     <title>Typography and Backgrounds</title>
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/reset.css" rel="resets">
-    
 </head>
 <body>
+    <header>
+        <h1>WeLcOmE!</h1>
+    </header>
     <h1>Typography and Backgrounds</h1>
     <p class="uppercase">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas ex quisquam possimus distinctio, nesciunt animi ratione! Commodi illum cumque alias pariatur dolor magnam perferendis adipisci veritatis? Quam architecto repudiandae ipsum!</p>
     <p class="bolded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id soluta ullam ab sed repudiandae, quo corrupti itaque cupiditate officia possimus veniam ut, dolorem quas quos hic quisquam quaerat. Explicabo, fuga!</p>
