created contact form

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -41,7 +41,26 @@
         <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
     </ul>
 </article>
+<!--Making Contact Form-->
+<h2>Contact to learn more</h2>
 </div>
+<form action="index.html" method="post">
+   <div><label for="fullname">Your Name</label></div>
+    <input id="fullname">
+    <div><label for="email">Your Email</label></div>
+    <input id="email">
+    <div><label for="message">Your Message</label></div>
+    <textarea id="message"></textarea>
+    <h4>Would you like to visit the starfish?</h4>
+    <label for="yes">Yes</label>
+    <input type="radio" id="yes">
+    <label for="no">No</label>
+    <input type="radio" id="no">
+    <label for="maybe">Maybe</label>
+    <input type="radio" id="maybe">
+    <div><button type="submit">Send</button></div>
+</form>
+
 </body>
     
 </html>
