--- a/midterm/index.html
+++ b/midterm/index.html
@@ -44,23 +44,25 @@
 <!--Making Contact Form-->
 <h2>Contact to learn more</h2>
 </div>
+
 <form action="index.html" method="post">
    <div><label for="fullname">Your Name</label></div>
-    <input id="fullname">
+    <input id="fullname" type="text" name="fullname">
     <div><label for="email">Your Email</label></div>
-    <input id="email">
+    <input id="email" type="text" name="email">
     <div><label for="message">Your Message</label></div>
     <textarea id="message"></textarea>
-    <h4>Would you like to visit the starfish?</h4>
+    <h3>Would you like to visit the starfish?</h3>
     <label for="yes">Yes</label>
     <input type="radio" id="yes">
     <label for="no">No</label>
     <input type="radio" id="no">
     <label for="maybe">Maybe</label>
     <input type="radio" id="maybe">
-    <div><button type="submit">Send</button></div>
+    <div><button type="submit" class="button">SEND</button></div>
 </form>
 
+<footer>© Lone Starfish.</footer>
 </body>
     
 </html>
