--- a/midterm/index.html
+++ b/midterm/index.html
@@ -9,17 +9,15 @@
 </head>
 <body>
     <!--header-->
-    <h1 class="LoneStarfish">Lone Starfish</h1>
-    <img src="images/lone-starfish-wide.jpg" alt="lone-starfish-wide" style="width:100%">
-
+    <div>
+    <header class= "header">
+    <h1>Lone Starfish</h1>
+    </header>
+    </div>
 <nav>
-    <table>
-        <tr>
-            <td>HOME</td>
-            <td>STORY</td>
-            <td>CONTACT</td>
-        </tr>
-    </table>
+   <a href="#">HOME</a> 
+   <a href="#">STORY</a>
+   <a href="#">CONTACT</a>
 </nav>
 
     <!--article about Starfish-->
