--- a/midterm/index.html
+++ b/midterm/index.html
@@ -14,10 +14,12 @@
     <h1>Lone Starfish</h1>
     </header>
     </div>
-<nav>
-   <a href="#">HOME</a> 
-   <a href="#">STORY</a>
-   <a href="#">CONTACT</a>
+<nav class="nav">
+    <ul>
+   <li><a href="#">HOME</a></li>
+   <li><a href="#">STORY</a></li>
+   <li><a href="#">CONTACT</a></li>
+   </ul>
 </nav>
 
     <!--article about Starfish-->
@@ -44,12 +46,17 @@
 </div>
 
 <form action="index.html" method="post">
-   <div><label for="fullname">Your Name</label></div>
+
+
+   <label for="fullname">Your Name</label>
     <input id="fullname" type="text" name="fullname">
-    <div><label for="email">Your Email</label></div>
+    <br>
+    <label for="email">Your Email</label>
     <input id="email" type="text" name="email">
-    <div><label for="message">Your Message</label></div>
-    <textarea id="message"></textarea>
+    <br>
+    <label for="message">Your Message</label>
+    <input id="message" type="text" name="message">
+
     <h3>Would you like to visit the starfish?</h3>
     <label for="yes">Yes</label>
     <input type="radio" id="yes">
