finalizes Midterm assignment

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -14,6 +14,8 @@
     <h1>Lone Starfish</h1>
     </header>
     </div>
+
+    <!--creates navigation bar-->
 <nav class="nav">
     <ul>
    <li><a href="#">HOME</a></li>
@@ -30,7 +32,8 @@
     <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
 </article>
 </div>
-<!--listing facts about Starfish-->
+
+<!--makes a list of facts about Starfish-->
 <div>
 <article>
     <h2>Facts About Starfish</h2>
@@ -41,10 +44,10 @@
         <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
     </ul>
 </article>
-<!--Making Contact Form-->
-<h2>Contact to learn more</h2>
 </div>
 
+<!--Creates Contact Form-->
+<h2>Contact to learn more</h2>
 <form action="index.html" method="post">
 
 
@@ -57,6 +60,7 @@
     <label for="message">Your Message</label>
     <input id="message" type="text" name="message">
 
+    <!--creates a multiple-choice question-->
     <h3>Would you like to visit the starfish?</h3>
     <label for="yes">Yes</label>
     <input type="radio" id="yes">
@@ -66,7 +70,7 @@
     <input type="radio" id="maybe">
     <div><button type="submit" class="button">SEND</button></div>
 </form>
-
+ <!--Page footer for copyright-->
 <footer>© Lone Starfish.</footer>
 </body>
     
