--- a/midterm/index.html
+++ b/midterm/index.html
@@ -12,6 +12,7 @@
     <div>
     <header class= "header">
     <h1>Lone Starfish</h1>
+    <img src="images/lone-starfish-wide.jpg" alt="LoneStarfish">
     </header>
     </div>
 
