minor changes in code and adds comments

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -21,13 +21,14 @@
     <form> <!--search bar-->
     <div class="search-bar">
         <input type="text" placeholder="search"> 
-        <div class="searchbutton"><button>&#x1F50D</button></div>
+        <div class="searchbutton"><button>&#x1F50D;</button></div><!--makes button-->
+    </div>
     </form>
 
     <h1>Welcome to the Three Star Media</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, voluptates blanditiis? Sint obcaecati eum fuga? Ab incidunt voluptate eius animi architecto, possimus veritatis neque illo reprehenderit voluptatum sed delectus laudantium.</p>
     <img src="images/main-banner.jpg" alt="banner">
-    <div class="button"><button>Connect with us &#9654</button></div>
+    <div class="button"><button>Connect with us &#9654;</button></div>
     </header>
 
     <main>
@@ -44,35 +45,35 @@
                     <img src="images/digital.jpg" alt="digital">
                     <h2>Digital Transformation</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum doloribus molestiae sapiente unde veniam et non error ratione ad voluptatibus dolore, natus odio voluptatem ipsum dolor impedit quae, accusantium similique.</p>
-                    <button>Digital Plans &#9654</button>
+                    <button>Digital Plans &#9654; </button> <!--makes button-->
                 </section>
 
                 <section>
                     <img src="images/marketing.jpg" alt="marketing">
                     <h2>Marketing</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum doloribus molestiae sapiente unde veniam et non error ratione ad voluptatibus dolore, natus odio voluptatem ipsum dolor impedit quae, accusantium similique.</p>
-                    <button>Marketing Plans &#9654</button>
+                    <button> Marketing Plans &#9654; </button> <!--makes button-->
                 </section>
                 
                 <section>
                     <img src="images/video.jpg" alt="video">
                     <h2>Video Production</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis labore quas sed quam, ipsa asperiores eligendi sint modi possimus veritatis doloremque esse quaerat? Voluptatem quaerat vel veritatis repudiandae, sed natus.</p>
-                    <button>Video Plans &#9654</button>
+                    <button> Video Plans &#9654; </button> <!--makes button-->
                 </section>
 
                 <section>
                     <img src="images/web.jpg" alt="web">
                     <h2>Web Developpement</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem dignissimos placeat obcaecati, tempora beatae veniam! Magni voluptatem iusto doloremque officiis delectus, beatae, perspiciatis pariatur, quidem ex impedit id nihil possimus!</p>
-                    <button>Web Plans &#9654</button>
+                    <button> Web Plans &#9654; </button> <!--makes button-->
                 </section>
 
                 <section>
                     <img src="images/print.jpg" alt="print">
                     <h2>Print</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae itaque ipsum, quae labore ducimus inventore eligendi aspernatur sed reprehenderit suscipit excepturi nemo! Libero voluptas cumque quis exercitationem saepe, provident ad.</p>
-                    <button>Print Plans &#9654</button>
+                    <button>Print Plans &#9654;</button> <!--makes button-->
                 </section>
 
             </section><!--end section-services-->
@@ -81,7 +82,7 @@
                 <img src="images/vision.jpg" alt="vision">
                 <h2>Our Vision</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero distinctio fuga voluptates omnis odit ullam minima sit velit labore dignissimos incidunt culpa tempore illum explicabo eius, earum accusamus quia soluta?</p>
-                <button>Learn More &#9654</button>
+                <button>Learn More &#9654; </button> <!--makes button-->
             </section><!--end section-vision-->
 
             <section class="section-team"><!--team section-->
@@ -105,7 +106,7 @@
             <h1>Contact Us</h1>
             <section>
                 <h2>Send us a message</h2>
-                <form>
+                <form> <!--makes form-->
                 <div>
                     <label for="fullname">Full Name</label>
                     <input id="fullname" type="text">
@@ -125,15 +126,14 @@
             </section>
             <section>
                 <h2>Location</h2>
-                <em><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9445518045395!2d-75.75712548419932!3d45.34993154908129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1637809210617!5m2!1sen!2sca"width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></em>
-
+                <em><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9445518045395!2d-75.75712548419932!3d45.34993154908129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1637809210617!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></em> <!--embeds map-->
             </section>
             </section><!--end section-contact-->
 
             <section>
                 <h2>Hours of operation</h2>
                 <section>
-                        <table>
+                        <table> <!--makes table-->
                             <thead> 
                                 <tr>
                                     <th>Days</th>
@@ -157,7 +157,7 @@
     </main>
 
     <footer>
-        <p>&copy;Copyright Three Star Media, 2020</p>
+        <p>&copy; Copyright Three Star Media, 2020</p>
         <p>All images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
     </footer>
 
