some changes mostly buttons

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Three Star Media</title>
 </head>
 <body>
@@ -11,7 +15,7 @@
     <img src="images/logo.png" alt="logo">
     <nav> <!--Nav Area-->
         <ul>
-        <li><a href="home">Home</a></li> 
+        <li class="home"><a href="home" class="homea">Home</a></li> 
         <li><a href="about">About Us</a></li>
         <li><a href="Services">Services</a></li>
         <li><a href="team">Team</a></li>
@@ -19,7 +23,7 @@
         </ul>
     </nav>
     <form> <!--search bar-->
-    <div class="search-bar">
+    <div class="searchbar">
         <input type="text" placeholder="search"> 
         <div class="searchbutton"><button>&#x1F50D;</button></div><!--makes button-->
     </div>
@@ -28,7 +32,9 @@
     <h1>Welcome to the Three Star Media</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, voluptates blanditiis? Sint obcaecati eum fuga? Ab incidunt voluptate eius animi architecto, possimus veritatis neque illo reprehenderit voluptatum sed delectus laudantium.</p>
     <img src="images/main-banner.jpg" alt="banner">
-    <div class="button"><button>Connect with us &#9654;</button></div>
+    <div >
+        <button class="button1">Connect with us &#9654;</button>
+    </div>
     </header>
 
     <main>
@@ -45,35 +51,35 @@
                     <img src="images/digital.jpg" alt="digital">
                     <h2>Digital Transformation</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum doloribus molestiae sapiente unde veniam et non error ratione ad voluptatibus dolore, natus odio voluptatem ipsum dolor impedit quae, accusantium similique.</p>
-                    <button>Digital Plans &#9654; </button> <!--makes button-->
+                    <button class="buttons">Digital Plans &#9654; </button> <!--makes button-->
                 </section>
 
                 <section>
                     <img src="images/marketing.jpg" alt="marketing">
                     <h2>Marketing</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum doloribus molestiae sapiente unde veniam et non error ratione ad voluptatibus dolore, natus odio voluptatem ipsum dolor impedit quae, accusantium similique.</p>
-                    <button> Marketing Plans &#9654; </button> <!--makes button-->
+                    <button class="buttons"> Marketing Plans &#9654; </button> <!--makes button-->
                 </section>
                 
                 <section>
                     <img src="images/video.jpg" alt="video">
                     <h2>Video Production</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis labore quas sed quam, ipsa asperiores eligendi sint modi possimus veritatis doloremque esse quaerat? Voluptatem quaerat vel veritatis repudiandae, sed natus.</p>
-                    <button> Video Plans &#9654; </button> <!--makes button-->
+                    <button class="buttons"> Video Plans &#9654; </button> <!--makes button-->
                 </section>
 
                 <section>
                     <img src="images/web.jpg" alt="web">
                     <h2>Web Developpement</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem dignissimos placeat obcaecati, tempora beatae veniam! Magni voluptatem iusto doloremque officiis delectus, beatae, perspiciatis pariatur, quidem ex impedit id nihil possimus!</p>
-                    <button> Web Plans &#9654; </button> <!--makes button-->
+                    <button class="buttons"> Web Plans &#9654; </button> <!--makes button-->
                 </section>
 
                 <section>
                     <img src="images/print.jpg" alt="print">
                     <h2>Print</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae itaque ipsum, quae labore ducimus inventore eligendi aspernatur sed reprehenderit suscipit excepturi nemo! Libero voluptas cumque quis exercitationem saepe, provident ad.</p>
-                    <button>Print Plans &#9654;</button> <!--makes button-->
+                    <button class="buttons">Print Plans &#9654;</button> <!--makes button-->
                 </section>
 
             </section><!--end section-services-->
@@ -82,7 +88,7 @@
                 <img src="images/vision.jpg" alt="vision">
                 <h2>Our Vision</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero distinctio fuga voluptates omnis odit ullam minima sit velit labore dignissimos incidunt culpa tempore illum explicabo eius, earum accusamus quia soluta?</p>
-                <button>Learn More &#9654; </button> <!--makes button-->
+                <button1>Learn More &#9654; </button> <!--makes button-->
             </section><!--end section-vision-->
 
             <section class="section-team"><!--team section-->
