fixes headings mostly

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -39,45 +39,46 @@
 
     <main>
             <section class="section-about"> <!--about us section-->
-                <img src="images/about-us.jpg" alt="pingpong">
-                <h1>About Us</h1>
+                <img src="images/about-us.jpg" alt="pingpong" class="pingpong">
+                <h2>About Us</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, aliquid. Repellat distinctio recusandae reiciendis deserunt soluta animi voluptatum nostrum corrupti officia inventore voluptates nobis facilis omnis consequuntur obcaecati, explicabo dolores.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error magni a saepe tempore, dignissimos incidunt neque? Quam corporis voluptas sit necessitatibus quisquam facere distinctio, pariatur eveniet mollitia, nostrum libero fugit.</p>
             </section><!--end section-about-->
 
             <section class="section-services"> <!--services section-->
-                <h1>Our Services</h1>
+                <h2>Our Services</h2>
 
-               <section>
+               <section class="digital">
                     <img src="images/digital.jpg" alt="digital">
-                    <h2>Digital Transformation</h2>
+                    <h3>Digital Transformation</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum doloribus molestiae sapiente unde veniam et non error ratione ad voluptatibus dolore, natus odio voluptatem ipsum dolor impedit quae, accusantium similique.</p>
                     <button class="buttons">Digital Plans &#9654; </button> <!--makes button-->
                 </section>
 
-                <section>
+                <section class="marketing">
                     <img src="images/marketing.jpg" alt="marketing">
-                    <h2>Marketing</h2>
+                    <h3>Marketing</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum doloribus molestiae sapiente unde veniam et non error ratione ad voluptatibus dolore, natus odio voluptatem ipsum dolor impedit quae, accusantium similique.</p>
                     <button class="buttons"> Marketing Plans &#9654; </button> <!--makes button-->
                 </section>
                 
-                <section>
+                <section class="video">
                     <img src="images/video.jpg" alt="video">
-                    <h2>Video Production</h2>
+                    <h3>Video Production</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis labore quas sed quam, ipsa asperiores eligendi sint modi possimus veritatis doloremque esse quaerat? Voluptatem quaerat vel veritatis repudiandae, sed natus.</p>
                     <button class="buttons"> Video Plans &#9654; </button> <!--makes button-->
                 </section>
 
-                <section>
+                <section class="web">
                     <img src="images/web.jpg" alt="web">
-                    <h2>Web Developpement</h2>
+                    <h3>Web Developpement</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem dignissimos placeat obcaecati, tempora beatae veniam! Magni voluptatem iusto doloremque officiis delectus, beatae, perspiciatis pariatur, quidem ex impedit id nihil possimus!</p>
                     <button class="buttons"> Web Plans &#9654; </button> <!--makes button-->
                 </section>
 
-                <section>
+                <section class="print">
                     <img src="images/print.jpg" alt="print">
-                    <h2>Print</h2>
+                    <h3>Print</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae itaque ipsum, quae labore ducimus inventore eligendi aspernatur sed reprehenderit suscipit excepturi nemo! Libero voluptas cumque quis exercitationem saepe, provident ad.</p>
                     <button class="buttons">Print Plans &#9654;</button> <!--makes button-->
                 </section>
@@ -92,26 +93,26 @@
             </section><!--end section-vision-->
 
             <section class="section-team"><!--team section-->
-                <h1>Our Team</h1>
+                <h2>Our Team</h2>
                 <section> 
                     <img src="images/john.jpg" alt="john">
-                    <h2>John Doe</h2>
+                    <h3>John Doe</h3>
                     <h4>CEO and Co-owner</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit vero impedit cum error accusantium aspernatur asperiores, beatae placeat, amet, quasi delectus modi! Odit nisi dignissimos laboriosam at illo quod assumenda?</p>
                 </section>
 
                 <section>
                     <img src="images/bob.jpg" alt="bob">
-                    <h2>Bob Rite</h2>
+                    <h3>Bob Rite</h3>
                     <h4>CEO and Co-owner</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit vero impedit cum error accusantium aspernatur asperiores, beatae placeat, amet, quasi delectus modi! Odit nisi dignissimos laboriosam at illo quod assumenda?</p>
                 </section>
             </section><!--end section-team-->
 
             <section class="section-contact"> <!--contact section-->
-            <h1>Contact Us</h1>
+            <h2>Contact Us</h2>
             <section>
-                <h2>Send us a message</h2>
+                <h3>Send us a message</h3>
                 <form> <!--makes form-->
                 <div>
                     <label for="fullname">Full Name</label>
